// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`arrow_call.js - flow-verify 1`] = `
const testResults = results.testResults.map(testResult =>
  formatResult(testResult, formatter, reporter)
);

it('mocks regexp instances', () => {
  expect(
    () => moduleMocker.generateFromMetadata(moduleMocker.getMetadata(/a/)),
  ).not.toThrow();
});

expect(() => asyncRequest({ url: "/test-endpoint" }))
  .toThrowError(/Required parameter/);

expect(() => asyncRequest({ url: "/test-endpoint-but-with-a-long-url" }))
  .toThrowError(/Required parameter/);

expect(() => asyncRequest({ url: "/test-endpoint-but-with-a-suuuuuuuuper-long-url" }))
  .toThrowError(/Required parameter/);

expect(() => asyncRequest({ type: "foo", url: "/test-endpoint" }))
  .not.toThrowError();

expect(() => asyncRequest({ type: "foo", url: "/test-endpoint-but-with-a-long-url" }))
  .not.toThrowError();

const a = Observable
  .fromPromise(axiosInstance.post('/carts/mine'))
  .map((response) => response.data)

const b = Observable.fromPromise(axiosInstance.get(url))
  .map((response) => response.data)

func(
  veryLoooooooooooooooooooooooongName,
  veryLooooooooooooooooooooooooongName =>
    veryLoooooooooooooooongName.something()
);

const composition = (ViewComponent, ContainerComponent) =>
  class extends React.Component {
    static propTypes = {};
  };
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
const testResults = results.testResults.map(testResult =>
  formatResult(testResult, formatter, reporter)
);

it("mocks regexp instances", () => {
  expect(() =>
    moduleMocker.generateFromMetadata(moduleMocker.getMetadata(/a/))
  ).not.toThrow();
});

expect(() => asyncRequest({ url: "/test-endpoint" })).toThrowError(
  /Required parameter/
);

expect(() =>
  asyncRequest({ url: "/test-endpoint-but-with-a-long-url" })
).toThrowError(/Required parameter/);

expect(() =>
  asyncRequest({ url: "/test-endpoint-but-with-a-suuuuuuuuper-long-url" })
).toThrowError(/Required parameter/);

expect(() =>
  asyncRequest({ type: "foo", url: "/test-endpoint" })
).not.toThrowError();

expect(() =>
  asyncRequest({ type: "foo", url: "/test-endpoint-but-with-a-long-url" })
).not.toThrowError();

const a = Observable.fromPromise(axiosInstance.post("/carts/mine")).map(
  response => response.data
);

const b = Observable.fromPromise(axiosInstance.get(url)).map(
  response => response.data
);

func(
  veryLoooooooooooooooooooooooongName,
  veryLooooooooooooooooooooooooongName =>
    veryLoooooooooooooooongName.something()
);

const composition = (ViewComponent, ContainerComponent) =>
  class extends React.Component {
    static propTypes = {};
  };

`;

exports[`arrow_call.js - flow-verify 2`] = `
const testResults = results.testResults.map(testResult =>
  formatResult(testResult, formatter, reporter)
);

it('mocks regexp instances', () => {
  expect(
    () => moduleMocker.generateFromMetadata(moduleMocker.getMetadata(/a/)),
  ).not.toThrow();
});

expect(() => asyncRequest({ url: "/test-endpoint" }))
  .toThrowError(/Required parameter/);

expect(() => asyncRequest({ url: "/test-endpoint-but-with-a-long-url" }))
  .toThrowError(/Required parameter/);

expect(() => asyncRequest({ url: "/test-endpoint-but-with-a-suuuuuuuuper-long-url" }))
  .toThrowError(/Required parameter/);

expect(() => asyncRequest({ type: "foo", url: "/test-endpoint" }))
  .not.toThrowError();

expect(() => asyncRequest({ type: "foo", url: "/test-endpoint-but-with-a-long-url" }))
  .not.toThrowError();

const a = Observable
  .fromPromise(axiosInstance.post('/carts/mine'))
  .map((response) => response.data)

const b = Observable.fromPromise(axiosInstance.get(url))
  .map((response) => response.data)

func(
  veryLoooooooooooooooooooooooongName,
  veryLooooooooooooooooooooooooongName =>
    veryLoooooooooooooooongName.something()
);

const composition = (ViewComponent, ContainerComponent) =>
  class extends React.Component {
    static propTypes = {};
  };
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
const testResults = results.testResults.map(testResult =>
  formatResult(testResult, formatter, reporter),
);

it("mocks regexp instances", () => {
  expect(() =>
    moduleMocker.generateFromMetadata(moduleMocker.getMetadata(/a/)),
  ).not.toThrow();
});

expect(() => asyncRequest({ url: "/test-endpoint" })).toThrowError(
  /Required parameter/,
);

expect(() =>
  asyncRequest({ url: "/test-endpoint-but-with-a-long-url" }),
).toThrowError(/Required parameter/);

expect(() =>
  asyncRequest({ url: "/test-endpoint-but-with-a-suuuuuuuuper-long-url" }),
).toThrowError(/Required parameter/);

expect(() =>
  asyncRequest({ type: "foo", url: "/test-endpoint" }),
).not.toThrowError();

expect(() =>
  asyncRequest({ type: "foo", url: "/test-endpoint-but-with-a-long-url" }),
).not.toThrowError();

const a = Observable.fromPromise(axiosInstance.post("/carts/mine")).map(
  response => response.data,
);

const b = Observable.fromPromise(axiosInstance.get(url)).map(
  response => response.data,
);

func(
  veryLoooooooooooooooooooooooongName,
  veryLooooooooooooooooooooooooongName =>
    veryLoooooooooooooooongName.something(),
);

const composition = (ViewComponent, ContainerComponent) =>
  class extends React.Component {
    static propTypes = {};
  };

`;

exports[`arrow_call.js - flow-verify 3`] = `
const testResults = results.testResults.map(testResult =>
  formatResult(testResult, formatter, reporter)
);

it('mocks regexp instances', () => {
  expect(
    () => moduleMocker.generateFromMetadata(moduleMocker.getMetadata(/a/)),
  ).not.toThrow();
});

expect(() => asyncRequest({ url: "/test-endpoint" }))
  .toThrowError(/Required parameter/);

expect(() => asyncRequest({ url: "/test-endpoint-but-with-a-long-url" }))
  .toThrowError(/Required parameter/);

expect(() => asyncRequest({ url: "/test-endpoint-but-with-a-suuuuuuuuper-long-url" }))
  .toThrowError(/Required parameter/);

expect(() => asyncRequest({ type: "foo", url: "/test-endpoint" }))
  .not.toThrowError();

expect(() => asyncRequest({ type: "foo", url: "/test-endpoint-but-with-a-long-url" }))
  .not.toThrowError();

const a = Observable
  .fromPromise(axiosInstance.post('/carts/mine'))
  .map((response) => response.data)

const b = Observable.fromPromise(axiosInstance.get(url))
  .map((response) => response.data)

func(
  veryLoooooooooooooooooooooooongName,
  veryLooooooooooooooooooooooooongName =>
    veryLoooooooooooooooongName.something()
);

const composition = (ViewComponent, ContainerComponent) =>
  class extends React.Component {
    static propTypes = {};
  };
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
const testResults = results.testResults.map((testResult) =>
  formatResult(testResult, formatter, reporter)
);

it("mocks regexp instances", () => {
  expect(() =>
    moduleMocker.generateFromMetadata(moduleMocker.getMetadata(/a/))
  ).not.toThrow();
});

expect(() => asyncRequest({ url: "/test-endpoint" })).toThrowError(
  /Required parameter/
);

expect(() =>
  asyncRequest({ url: "/test-endpoint-but-with-a-long-url" })
).toThrowError(/Required parameter/);

expect(() =>
  asyncRequest({ url: "/test-endpoint-but-with-a-suuuuuuuuper-long-url" })
).toThrowError(/Required parameter/);

expect(() =>
  asyncRequest({ type: "foo", url: "/test-endpoint" })
).not.toThrowError();

expect(() =>
  asyncRequest({ type: "foo", url: "/test-endpoint-but-with-a-long-url" })
).not.toThrowError();

const a = Observable.fromPromise(axiosInstance.post("/carts/mine")).map(
  (response) => response.data
);

const b = Observable.fromPromise(axiosInstance.get(url)).map(
  (response) => response.data
);

func(
  veryLoooooooooooooooooooooooongName,
  (veryLooooooooooooooooooooooooongName) =>
    veryLoooooooooooooooongName.something()
);

const composition = (ViewComponent, ContainerComponent) =>
  class extends React.Component {
    static propTypes = {};
  };

`;
